--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -11,7 +11,7 @@
     "dev": "node --watch index.js",
     "test": "echo 'Error: no test specified' && exit 1",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
-    "deploy": "git add . && git commit -m uibuild && git push remote",
+    "deploy": "git add . && git commit -m uibuild && git push origin",
     "deploy:full": "npm run build:ui && npm run deploy"
   },
   "dependencies": {
