--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -15,7 +15,9 @@
     "deploy:full": "npm run build:ui && npm run deploy"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "mongoose": "^8.15.1",
     "morgan": "^1.10.0"
   }
 }
