--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -10,6 +10,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "test": "echo 'Error: no test specified' && exit 1",
+    "lint": "eslint .",
     "build:ui": "rm -rf dist && cd ../../part2/phonebook && npm run build && cp -r dist ../../part3/phonebook",
     "deploy": "git add . && git commit -m uibuild && git push origin",
     "deploy:full": "npm run build:ui && npm run deploy"
@@ -19,5 +20,12 @@
     "express": "^5.1.0",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.27.0",
+    "@stylistic/eslint-plugin": "^4.4.0",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.2.0"
   }
 }
