--- a/part8/library-graphql/server/package.json
+++ b/part8/library-graphql/server/package.json
@@ -8,10 +8,24 @@
   "main": "library-backend.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node --watch library-backend.js"
+    "dev": "NODE_ENV=development node --watch index.js",
+    "build:ui": "cd ../client && rm -rf dist/ && npm run build && cp -r dist/ ../server",
+    "start": "NODE_ENV=production node index.js"
   },
   "dependencies": {
     "@apollo/server": "^4.12.2",
-    "graphql": "^16.11.0"
+    "@as-integrations/express5": "^1.1.0",
+    "@graphql-tools/schema": "^10.0.23",
+    "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "graphql": "^16.11.0",
+    "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.8.7",
+    "mongoose-unique-validator": "^4.0.1",
+    "ws": "^8.18.2"
   }
 }
