--- a/part8/library-graphql/server/package.json
+++ b/part8/library-graphql/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development node --watch index.js",
-    "build:ui": "cd ../client && rm -rf dist/ && npm run build && cp -r dist/ ../server",
+    "build:ui": "npm install && cd ../client && npm install && rm -rf dist/ && npm run build && cp -r dist/ ../server",
     "start": "NODE_ENV=production node index.js"
   },
   "dependencies": {
