part8: hide AuthorBirthYearForm when not authenticated + config deployment

--- a/part8/library-graphql/client/.env.production
+++ b/part8/library-graphql/client/.env.production
@@ -1,2 +1,3 @@
 VITE_APP_TITLE=library
-VITE_GRAPHQL_URL=fullstackopen-library.onrender.com
+VITE_GRAPHQL_URI_HTTP="https://fullstackopen-library.onrender.com/graphql"
+VITE_GRAPHQL_URL_WS="wss://fullstackopen-library.onrender.com/graphql"
