--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "part11/pokedex"]
 	path = part11/pokedex
 	url = git@github.com:jchanke/full-stack-open-pokedex.git
+[submodule "part12/containers"]
+	path = part12/containers
+	url = git@github.com:jchanke/full-stack-open-containers.git
