--- a/part09/patientor/server/package.json
+++ b/part09/patientor/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "tsc": "tsc",
     "dev": "ts-node-dev src/index.ts",
-    "start": "node build/index.js",
+    "start": "node build/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ."
   },
