--- a/part09/patientor/server/package.json
+++ b/part09/patientor/server/package.json
@@ -18,6 +18,7 @@
     "@stylistic/eslint-plugin": "^5.0.0",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.6",
+    "@types/node": "^25.0.3",
     "eslint": "^9.29.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3",
